[gd_scene load_steps=8 format=3 uid="uid://b0kywxw05uaeb"]

[ext_resource type="Script" path="res://loading.gd" id="1_hutak"]
[ext_resource type="Texture2D" uid="uid://sh17vcwmn1qx" path="res://Игровые асеты/bg_barracks.png" id="2_xthqy"]
[ext_resource type="Texture2D" uid="uid://cvm8me5gpuyq4" path="res://Игровые асеты/Способности/skill_icon_skchr_headbr_2.png" id="3_epw6p"]
[ext_resource type="Script" path="res://Scripts/Save1.gd" id="4_s2uip"]
[ext_resource type="Script" path="res://Scripts/Save2.gd" id="5_lhrgj"]
[ext_resource type="Script" path="res://Scripts/Save3.gd" id="6_x7h7o"]
[ext_resource type="Texture2D" uid="uid://dpawjtwjya05y" path="res://Игровые асеты/Без имени-5.png" id="7_w3lux"]

[node name="Control" type="CanvasLayer"]
follow_viewport_scale = 5.0
script = ExtResource("1_hutak")

[node name="BgBarracks" type="Sprite2D" parent="."]
position = Vector2(922, 482)
scale = Vector2(2, 2)
texture = ExtResource("2_xthqy")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
texture_normal = ExtResource("3_epw6p")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 80.0
offset_right = 874.0
offset_bottom = 480.0
alignment = 1

[node name="Save1" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
script = ExtResource("4_s2uip")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/Save1"]
layout_mode = 0
offset_left = 23.0
offset_top = 24.0
offset_right = 223.0
offset_bottom = 374.0

[node name="SaveName" type="RichTextLabel" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "*Первое сохранение*"

[node name="1" type="Label" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(40, 50)
layout_mode = 2

[node name="Lvl" type="RichTextLabel" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Уровень - *"

[node name="Exp" type="RichTextLabel" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Опыт - *"

[node name="2" type="Label" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Str" type="RichTextLabel" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Сила - *"

[node name="Agi" type="RichTextLabel" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Ловкость - *"

[node name="Int" type="RichTextLabel" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Интелект - *"

[node name="Money" type="RichTextLabel" parent="Panel/HBoxContainer/Save1/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Деньги - *"

[node name="Load1" type="Button" parent="Panel/HBoxContainer/Save1"]
layout_mode = 0
offset_left = 64.0
offset_top = 350.0
offset_right = 154.0
offset_bottom = 381.0
text = "Загрузить"

[node name="1" type="Label" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Save2" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
script = ExtResource("5_lhrgj")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/Save2"]
layout_mode = 0
offset_left = 23.0
offset_top = 24.0
offset_right = 223.0
offset_bottom = 374.0

[node name="SaveName" type="RichTextLabel" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "*Первое сохранение*"

[node name="1" type="Label" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(40, 50)
layout_mode = 2

[node name="Lvl" type="RichTextLabel" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Уровень - *"

[node name="Exp" type="RichTextLabel" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Опыт - *"

[node name="2" type="Label" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Str" type="RichTextLabel" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Сила - *"

[node name="Agi" type="RichTextLabel" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Ловкость - *"

[node name="Int" type="RichTextLabel" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Интелект - *"

[node name="Money" type="RichTextLabel" parent="Panel/HBoxContainer/Save2/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Деньги - *"

[node name="Load2" type="Button" parent="Panel/HBoxContainer/Save2"]
layout_mode = 0
offset_left = 76.0
offset_top = 350.0
offset_right = 166.0
offset_bottom = 381.0
text = "Загрузить"

[node name="2" type="Label" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Save3" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
script = ExtResource("6_x7h7o")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/Save3"]
layout_mode = 0
offset_left = 23.0
offset_top = 24.0
offset_right = 223.0
offset_bottom = 374.0

[node name="SaveName" type="RichTextLabel" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "*Первое сохранение*"

[node name="1" type="Label" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(40, 50)
layout_mode = 2

[node name="Lvl" type="RichTextLabel" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Уровень - *"

[node name="Exp" type="RichTextLabel" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Опыт - *"

[node name="2" type="Label" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Str" type="RichTextLabel" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Сила - *"

[node name="Agi" type="RichTextLabel" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Ловкость - *"

[node name="Int" type="RichTextLabel" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Интелект - *"

[node name="Money" type="RichTextLabel" parent="Panel/HBoxContainer/Save3/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.085)
layout_mode = 2
text = "Деньги - *"

[node name="Load3" type="Button" parent="Panel/HBoxContainer/Save3"]
layout_mode = 0
offset_left = 89.0
offset_top = 350.0
offset_right = 179.0
offset_bottom = 381.0
text = "Загрузить"

[node name="blackScreen" type="Sprite2D" parent="." groups=["jopa"]]
modulate = Color(1, 1, 1, 0)
top_level = true
texture = ExtResource("7_w3lux")
centered = false

[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Save1/Load1" to="." method="_on_load_1_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Save2/Load2" to="." method="_on_load_2_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Save3/Load3" to="." method="_on_load_3_pressed"]
